--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,11 +37,29 @@ body{
 
 /*section styles*/
 #cover {
-	height: 75vh;
+	min-height: 430px;
     max-height: 560px;
     background: #ff0000;
     color: #fff;
     margin-bottom: 70px;
+    background: url(../images/TNW-at-FTHQ-min-796x640.jpg) no-repeat 0 100%;
+    background-size: 100% 220%;
+    background-position: center;
+}
+#cover-gradient1 {
+
+	width: 100%;
+	min-height: 430px;
+	background: linear-gradient(to bottom right, rgba(0,0,0,0), rgba(0,0,0,.7), #000);
+}
+#cover-gradient2 {
+
+	width: 100%;
+	min-height: 430px;
+	background: transparent url(../images/cover-gradient.png) no-repeat;
+    background-position: 0 0;
+    background-size: cover;
+    mix-blend-mode: lighten;
 }
 .tnw {
 	background: transparent url(../images/tnw.svg) no-repeat;
