--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,16 +28,37 @@ body{
     position: relative;
     /*z-index: 2;*/
     color: #fff;
+    padding-left: 10px;
+    color: #909090;
+}
+.nav-topbar li{
+	margin: 0 10px;
+}
+.nav-bar {
+	padding-left: 10px;
+}
+.nav-bar li{
+    font-weight: 500;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    color: #aaa;
+    display: block;
+    height: 30px;
+    letter-spacing: .04em;
+    line-height: 1;
+    padding: 18px 10px 0;
 }
 .nav-mob {
 	box-shadow: 0 16px 48px rgba(0,0,0,.15);
     line-height: 30px;
     background: #fd3;
+    padding-left: 20px;
+    font-size: 0.9em;
 }
 
 /*section styles*/
 #cover {
-	min-height: 430px;
+	min-height: 490px;
     max-height: 560px;
     background: #ff0000;
     color: #fff;
@@ -49,13 +70,13 @@ body{
 #cover-gradient1 {
 
 	width: 100%;
-	min-height: 430px;
-	background: linear-gradient(to bottom right, rgba(0,0,0,0), rgba(0,0,0,.7), #000);
+	min-height: 490px;
+	background: linear-gradient(to bottom, rgba(0,0,0,.2), #000);
 }
 #cover-gradient2 {
 
 	width: 100vw;
-	height: 430px;
+	height: 490px;
 	background: transparent url(../images/cover-gradient.png) no-repeat;
     background-position: 0 0;
     background-size: cover;
@@ -71,18 +92,19 @@ body{
     max-height: 112px;
     line-height: 1;
     position: absolute;
-    top: 100px;
+    top: 140px;
     left: 24px;
     pointer-events: none;
     text-align: right;
 }
 .section-date {
 	position: relative;
-    bottom: 280px;
+    bottom: 340px;
+    font-weight: 600;
     left: 85%;
 }
 .section-content {
-	width: 95%;
+	width: 96%;
 	margin: 0 auto;
 }
 .content-head {
