--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -295,3 +295,65 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+/* footer styles */
+.footer{
+    color: #878787;
+    text-align: center;
+    margin-top: 2em;
+}
+
+#span-1 {
+    color: red;
+}
+
+.footer ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer li {
+    display: inline-block;
+}
+
+.footer-social a {
+    display: block;
+    box-sizing: border-box;
+    padding: 10px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    border: 2px solid #333;
+    background-color: #333;
+    color: #fff;
+}
+
+.footer-links {
+    padding: 2em 0 0 0;
+    background-color: #131313;
+}
+
+.footer-links ul{
+    margin: 20px;
+}
+
+.footer-links li{
+    padding: 5px;
+}
+
+
+
+.footer-legal{
+    background: black;
+    width: 100%;
+    height: 19px;
+    padding: 39px 0 39px 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer-menu a{
+    font-size: 12px;
+    text-decoration: none;
+    color: #878787;
+}
