--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,8 @@ body{
 }
 .nav-bar {
 	padding-left: 10px;
+	width: 60%;
+	margin: 0 50px 0 0;
 }
 .nav-bar li{
     font-weight: 500;
@@ -54,6 +56,12 @@ body{
     background: #fd3;
     padding-left: 20px;
     font-size: 0.9em;
+    clear: both;
+}
+#search-bar {
+	padding: 15px;
+	border-left: 1px solid #aaa;
+	color: #aaa;
 }
 
 /*section styles*/
@@ -112,8 +120,9 @@ body{
 }
 .content-body {
 	font-size: 2em;
-	line-height: 2;
+	line-height: 1.2;
 	font-weight: 1000;
+	margin: 30px 0;
 }
 .content-caption {
 	font-size: 0.7em;
