--- a/assets/css/responsive-styles.css
+++ b/assets/css/responsive-styles.css
@@ -1,6 +1,6 @@
 
 /* Extra small devices (phones , 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 	.nav-topbar{ display: none; }
 	.nav-bar{display: none;}
 	.tnw{display: none;}
@@ -24,15 +24,72 @@
 		height: 200px;
 	}
 
+	.hidden {
+		display: inherit;
+		visibility: hidden;
+	}
+
+	.latest-article{
+		display: flex;
+		flex-flow: column wrap;
+		width: 97%;
+		height: 75px;
+		margin-bottom: 8px;
+	}
+
+	.latest-article div[id^="art"] {
+		width: 20%;
+		height: 130px;
+	}
+
+	/* funding section */
+
+	.fund{
+		width: 100%;
+		margin-top: 20px;
+	}
+
+	#latest-funding{
+		margin: 0 .5vw;
+	}
+
+/* popular-section */
+
+	.popular-box{
+		width: 97%;
+		margin: 1em .5%;
+		height: auto;
+	}
+
+	/* deals section */
+
+	.offer-size {
+		width: 20%;
+		height: 200px;
+	}
+
+	.latest-article h2{
+		font-size: .95em;
+		width: 80%;
+		margin-top: 0;
+		margin-left: 10px;
+	}
+
+	.latest-article h3{
+		margin-left: 10px;
+	}
+
+	.deal{
+		margin-left: 10px;
+	}
+
+	.latest-article div[id^="offer"]{
+		width: 75px;
+		height: 75px;
+	}
 }
 
-@media only screen and (max-width: 652px) and (min-width: 600px) {
-
-}
-
-
-/* Small devices (portraint tablets and large phines, 600px and up) */
-@media only screen and (max-width: 768px) and (min-width: 600px) {
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
 	.nav-topbar{ display: none; }
 	.nav-bar{display: none;}
 	.tnw{display: none;}
@@ -50,31 +107,58 @@
 	.nav-secbar {
 		justify-content: flex-end;
 	}
-}
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-	#bar{ 
-	display: none; }
+/* article styles	 */
 
-	.section-date { 
-		bottom: 290px;
-		}
-
-}
-
-
-@media only screen and (max-width: 809px) and (min-width: 768px) {
-
-}
-
-/* Large devices (laptops / desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+	.latest-article{
+		width: 30%;
+		height: auto;
+		margin: 6px;
+	}
 	
+	.hidden {
+		display: inherit;
+		visibility: hidden;
+	}
+
+/* funding styles */
+
+.fund{
+    width: 33%;
+    min-width: 228px;
+    margin-top: 40px;
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up */
-@media only screen and (min-width: 1200px) {
+.no-display{
+	display: none;
+}
+
+/* popular section */
+#popular-section{
+	width: 95%;
+    height: auto;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.popular-box{
+    width: 48%;
+    min-width: 312px;
+    margin: 1em .5%;
+    height: auto;
+}
+
+}
+
+/* Extra large devices (large laptops and desktops, 1px and up */
+@media only screen and (min-width: 1024px) {
 	.section-date { bottom: 340px; }
+	 
+	.hidden{
+		display: none;
+	}
+
+
 }
 
