--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,11 +14,9 @@ body{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+
 /*head styles*/
 
-.nav {
-
-}
 .nav-topbar {
 	background: #131313;
     font-size: 13px;
@@ -26,7 +24,6 @@ body{
     line-height: 32px;
     max-height: 32px;
     position: relative;
-    /*z-index: 2;*/
     color: #fff;
     padding-left: 10px;
     color: #909090;
@@ -36,8 +33,6 @@ body{
 }
 .nav-bar {
 	padding-left: 10px;
-	width: 60%;
-	margin: 0 50px 0 0;
 }
 .nav-bar li{
     font-weight: 500;
@@ -56,12 +51,6 @@ body{
     background: #fd3;
     padding-left: 20px;
     font-size: 0.9em;
-    clear: both;
-}
-#search-bar {
-	padding: 15px;
-	border-left: 1px solid #aaa;
-	color: #aaa;
 }
 
 /*section styles*/
@@ -155,6 +144,10 @@ body{
     margin: 6px;
 }
 
+.last-item{
+    flex-grow: 1;
+}
+
 .latest-article div[id^="art"]{
     width: auto;
     height: 130px;
@@ -227,7 +220,7 @@ body{
 #latest-funding{
     flex-flow: row wrap;
     justify-content: space-between;
-    margin: 60px auto;
+    margin: 60px .5vw;
 }
 
 .funding-head{
@@ -539,6 +532,10 @@ body{
 
 
 /* deals styles */
+.deal{
+
+}
+
 .offer-size {
 	width: auto;
 	height: 200px;
@@ -553,35 +550,35 @@ body{
 	color: #505050;
 }
 #offer-img1 {
-	background: url(../images/offer1.jpg);
+	background: url(../images/offer1.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img2 {
-	background: url(../images/offer2.jpg);
+	background: url(../images/offer2.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img3 {
-	background: url(../images/offer3.jpg);
+	background: url(../images/offer3.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img4 {
-	background: url(../images/offer4.jpg);
+	background: url(../images/offer4.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img5 {
-	background: url(../images/offer5.jpg);
+	background: url(../images/offer5.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img6 {
-	background: url(../images/offer6.jpg);
+	background: url(../images/offer6.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img7 {
-	background: url(../images/offer7.jpg);
+	background: url(../images/offer7.jpg) no-repeat;
 	background-size: 100% auto;
 }
 #offer-img8 {
-	background: url(../images/offer8.jpg);
+	background: url(../images/offer8.jpg) no-repeat;
 	background-size: 100% auto;
 }
 
