--- a/assets/css/responsive-styles.css
+++ b/assets/css/responsive-styles.css
@@ -4,31 +4,14 @@
 	.nav-topbar{ display: none; }
 	.nav-bar{display: none;}
 	.tnw{display: none;}
-	#cover-gradient1{display: none;}
-	#cover-gradient2{display: none;}
-	#search-bar{
-		border-right: 1px solid #aaa; 
-	}
-	#bar{
-		margin: 20px 20px;
-		font-size: 1.4em;
-		color: #FF4422;
-	}
-	.section-date { 
-		display: none;
-	}
-	.nav-secbar {
-		justify-content: flex-end;
-	}
-	#cover {
-		height: 200px;
-	}
-
-	.hidden {
-		display: inherit;
-		visibility: hidden;
-	}
-
+	.section-date { display: none; }
+	#search-bar{ border-right: 1px solid #b2b2b2; }
+	.nav-secbar { justify-content: flex-end; }
+	.nav-mob { font-size: 0.7em; }
+	#cover { height: 300px; background-size: 100% 190%; }
+	#cover-gradient1 { height: 300px; }
+	#cover-gradient2 { height: 300px; background: none; }
+	.hidden { display: inherit; visibility: hidden; }
 	.latest-article{
 		display: flex;
 		flex-flow: column wrap;
@@ -36,22 +19,12 @@
 		height: 75px;
 		margin-bottom: 8px;
 	}
-
-	.latest-article div[id^="art"] {
-		width: 20%;
-		height: 130px;
-	}
+	.latest-article div[id^="art"] { width: 20%; height: 130px; }
 
 	/* funding section */
 
-	.fund{
-		width: 100%;
-		margin-top: 20px;
-	}
-
-	#latest-funding{
-		margin: 0 .5vw;
-	}
+	.fund{ width: 100%; margin-top: 20px; }
+	#latest-funding{ margin: 0 .5vw; }
 
 /* popular-section */
 
@@ -63,10 +36,7 @@
 
 	/* deals section */
 
-	.offer-size {
-		width: 20%;
-		height: 200px;
-	}
+	.offer-size { width: 20%; height: 200px; }
 
 	.latest-article h2{
 		font-size: .95em;
@@ -75,38 +45,32 @@
 		margin-left: 10px;
 	}
 
-	.latest-article h3{
-		margin-left: 10px;
-	}
+	.latest-article h3{ margin-left: 10px; }
 
-	.deal{
-		margin-left: 10px;
-	}
+	.deal{ margin-left: 10px; }
 
-	.latest-article div[id^="offer"]{
-		width: 75px;
-		height: 75px;
+	.latest-article div[id^="offer"]{ width: 75px; height: 75px; }
+
+	/* footer */
+	.footer-social a {
+	    padding: 5px;
+	    height: 30px;
+	    width: 30px;
 	}
+}
+
+@media only screen and (max-width: 600px) {
+	#cover { background-size: 100% 100%; }
 }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
 	.nav-topbar{ display: none; }
 	.nav-bar{display: none;}
 	.tnw{display: none;}
-	#cover-gradient1{display: none;}
-	#cover-gradient2{display: none;}
-	#search-bar{
-		border-right: 1px solid #aaa; 
-	}
-	#bar{
-		text-align: right;
-		margin: 20px 20px;
-		font-size: 1.4em;
-		color: #FF4422;
-	}
-	.nav-secbar {
-		justify-content: flex-end;
-	}
+	#search-bar{ border-right: 1px solid #b2b2b2; }
+	
+	.nav-secbar { justify-content: flex-end; }
+	.section-date { bottom: 300px; }
 
 /* article styles	 */
 
@@ -116,48 +80,43 @@
 		margin: 6px;
 	}
 	
-	.hidden {
-		display: inherit;
-		visibility: hidden;
-	}
+	.hidden { display: inherit; visibility: hidden; }
 
 /* funding styles */
 
-.fund{
-    width: 33%;
-    min-width: 228px;
-    margin-top: 40px;
-}
+	.fund{
+	    width: 33%;
+	    min-width: 228px;
+	    margin-top: 40px;
+	}
 
-.no-display{
-	display: none;
-}
+	.no-display{ display: none; }
 
-/* popular section */
-#popular-section{
-	width: 95%;
-    height: auto;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 auto;
-}
+	/* popular section */
+	#popular-section{
+		width: 95%;
+	    height: auto;
+	    flex-wrap: wrap;
+	    justify-content: space-between;
+	    margin: 0 auto;
+	}
 
-.popular-box{
-    width: 48%;
-    min-width: 312px;
-    margin: 1em .5%;
-    height: auto;
-}
+	.popular-box{
+	    width: 48%;
+	    min-width: 312px;
+	    margin: 1em .5%;
+	    height: auto;
+	}
 
-}
+	}
 
 /* Extra large devices (large laptops and desktops, 1px and up */
 @media only screen and (min-width: 1024px) {
-	.section-date { bottom: 340px; }
-	 
-	.hidden{
-		display: none;
-	}
+	#nav-logo { display: none; }
+	#bar { display: none; }
+	.section-date { bottom: 310px; }
+	.hidden{ display: none; }
+
 
 
 }
